--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@better-scroll/core": "^2.5.1",
     "@mdi/font": "7.0.96",
     "axios": "^1.4.0",
+    "better-scroll": "^2.5.1",
     "core-js": "^3.29.0",
+    "fontmin": "^1.0.1",
     "jsrsasign": "^10.8.6",
     "roboto-fontface": "*",
+    "stylus": "^0.59.0",
     "vue": "^3.2.0",
     "vue-cookies": "^1.8.3",
     "vue-router": "^4.0.0",
